src/bootstrap/test/v0_13/rejects/05_double_dollar_macos/main.zg
# requires: v0.13
a := 'A'
asm {
	mov x0, $${a}
	svc #0x80
}
